[package]
name = "glowing-chainsaw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
chrono = "0.4.19"
reqwest = {version="0.11.7", features=["json", "gzip"]}
serde = {version="1.0.131", features=["derive"]}
tokio = {version="1.14.0", features=["full"]}
